src/styles/blocks/footer.scss
@include on-desktop {
  .footer {
    padding-bottom: 140px;
    font-size: 14px;
    color: $header-text-color;
    font-weight: 400;
    font-family: 'IBM Plex Sans', sans-serif;
    padding-inline: 55px;
    padding-top: 47px;
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    gap: 30px;

    &__icons {
      display: flex;
      flex-direction: column;

      &-link {
        text-decoration: none;
        &-logo {
          font-family: Montserrat, sans-serif;
          font-size: 36px;
          font-weight: 700;
          line-height: 100%;
          margin-top: 15px;
          width: 170px;
          text-align: center;
          color: $header-text-color;
        }
      }

      &-social {
        margin-top: 62px;
        display: flex;
        flex-direction: row;
        justify-content: space-around;

        &-link {
          text-decoration: none;
          display: inline-block;

          &-logo  {
            margin-left: 30px;
            width: 34px;
            height: 34px;
          }
        }
      }
    }

    &__schedule {
      display: flex;
      flex-direction: column;
      grid-column: 3 / 5;

      &-header {
        text-decoration: none;
        color: $header-text-color;
        font-weight: 400;
        line-height: 140.63%;
        padding-bottom: 20px;
      }

      &-content1 {
        color: $header-text-color;
        font-weight: 600;
        line-height: 150%;

        &-light {
          font-weight: 400;
        }
      }

      &-content2 {
        color: $header-text-color;
        font-weight: 400;
        line-height: 150%;

        &-heavy {
          font-weight: 600;
        }
      }
    }

    &__contacts {
      grid-column:5 / 7;
      display: flex;
      flex-direction: column;

      &-header  {
        line-height: 140.63%;
        margin-top: 0;
        margin-bottom: 34px;
      }

      &-data {
        &-link {
          padding-bottom: 15px;
          display: inline-block;
          text-decoration: none;
          color: $header-text-color;
          line-height: 150%;
        }
      }

      &-arrow {
        display: none;
      }
    }

    &__line {
      grid-column: 7;
      width: 1px;
      height: 100%;
      background: rgba(26, 90, 76, 0.50);
    }

    &__nav {
      grid-column: 8/10;
      display: grid;
      grid-template-columns:  50% 50%;
      grid-template-rows: 30px 30px ;
      gap: 30px;

      &-text {
        text-decoration: none;
        color: $header-text-color;
      }
    }
  }
}

@include on-tablet {
  .footer {
    box-sizing: border-box;
    padding-bottom: 173px;
    font-size: 14px;
    color: $header-text-color;
    font-weight: 400;
    font-family: 'IBM Plex Sans', sans-serif;
    padding-inline: 34px;
    padding-top: 47px;
    display: grid;

    @include page-grid;

    gap: 30px;
    grid-template-rows: 334px 1px 125px;

    &__icons {
      display: flex;
      flex-direction: column;

      &-link {
        text-decoration: none;
        &-logo {
          font-family: Montserrat, sans-serif;
          font-size: 36px;
          font-weight: 700;
          line-height: 100%;
          width: 98px;
          text-align: center;
          margin: 0;
          color: $header-text-color;
        }

      }

      &-social {
        margin-top: 62px;
        display: flex;
        flex-direction: row;
        justify-content: space-around;

        &-link {
          text-decoration: none;
          display: inline-block;

          &-logo  {
            margin-left: 30px;
            width: 24px;
            height: 24px;
          }

          &-logo:first-child {
            margin-left: 0;
          }
        }
      }
    }

    &__schedule {
      display: flex;
      flex-direction: column;
      grid-column: 2 / 4;

      &-header {
        text-decoration: none;
        color: $header-text-color;
        font-weight: 400;
        line-height: 140.63%;
        padding-bottom: 20px;
      }

      &-content1 {
        color: $header-text-color;
        font-weight: 600;
        line-height: 150%;

        &-light {
          font-weight: 400;
        }
      }

      &-content2 {
        color: $header-text-color;
        font-weight: 400;
        line-height: 150%;

        &-heavy {
          font-weight: 600;
        }
      }
    }

    &__contacts {
      grid-column: -4 / -2;
      display: flex;
      flex-direction: column;


      &-header  {
        line-height: 140.63%;
        margin-top: 0;
        margin-bottom: 20px;
      }

      &-data {
        &-link {padding-bottom: 15px;
          display: inline-block;
          text-decoration: none;
          color: $header-text-color;
          line-height: 150%;
        }
      }

      &-arrow {
        display: none;
      }
    }

    &__line {
      grid-column: 2/ -2;
      width: 100%;
      height: 1px;
      background: rgba(26, 90, 76, 0.50);
    }

    &__nav {
      padding-top: 34px;
      grid-row: 3/ 4;
      grid-column: 2 / -2;
      display: grid;
      grid-template-columns:  50% 50%;
      grid-template-rows: 30px 30px ;
      gap: 30px;

      &-text {
        text-decoration: none;
        color: $header-text-color;
      }
    }
  }
}

@include on-phone {
  .footer {
    box-sizing: border-box;
    padding-bottom: 123px;
    font-size: 14px;
    color: $header-text-color;
    font-weight: 400;
    font-family: 'IBM Plex Sans', sans-serif;
    padding-inline: 34px;
    padding-top: 47px;
    display: grid;

    @include page-grid;

    gap: 40px 0;
    grid-template-rows: 104px 435px 1px 90px;

    &__icons {
      padding-top: 32px;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      grid-column: 1/ span 2;
      grid-row: 1 / 2;

      &-link {
        text-decoration: none;
        &-logo {
          font-family: Montserrat, sans-serif;
          font-size: 36px;
          font-weight: 700;
          line-height: 100%;
          text-align: center;
          margin: 0;
          color: $header-text-color;
        }

      }

      &-social {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        align-items: center;

        &-link {
          margin-right: 20px;
          text-decoration: none;
          display: inline-block;

          &-logo  {
            width: 24px;
            height: 24px;
          }

          &-logo:first-child {
            margin-left: 0;
          }
        }
      }
    }

    &__schedule {
      width: 130px;
      display: flex;
      flex-direction: column;
      grid-column: 1 / 2;
      grid-row: 2/3;

      &-header {
        text-decoration: none;
        color: $header-text-color;
        font-weight: 400;
        line-height: 140.63%;
        padding-bottom: 20px;
      }

      &-content1 {
        color: $header-text-color;
        font-weight: 600;
        line-height: 150%;

        &-light {
          font-weight: 400;
        }
      }

      &-content2 {
        color: $header-text-color;
        font-weight: 400;
        line-height: 150%;

        &-heavy {
          font-weight: 600;
        }
      }
    }

    &__contacts {
      width: 130px;
      grid-column: -2 / -1;
      display: flex;
      flex-direction: column;


      &-header  {
        line-height: 140.63%;
        margin-top: 0;
        margin-bottom: 20px;
      }

      &-data {
        &-link {padding-bottom: 15px;
          display: inline-block;
          text-decoration: none;
          color: $header-text-color;
          line-height: 150%;
        }
      }

      &-arrow {
        display: block;
        background-image: url(../images/arrow-up.png);
        background-size: 16px;
        background-repeat: no-repeat;
        background-position: center;
        width: 50px;
        height: 50px;
        border-radius: 50%;
        border: 1px solid $green-color;
        position: relative;
        bottom: -120px;
        left: 80px;
      }
    }

    &__line {
      grid-row: 3/4;
      grid-column: 1/ -1;
      width: 100%;
      height: 1px;
      background: rgba(26, 90, 76, 0.50);
    }

    &__nav {
      margin: 0;
      grid-row: 4/ 5;
      grid-column: 1 / -1;
      display: grid;
      grid-template-columns:  50% 50%;
      grid-template-rows: 30px 30px ;
      gap: 30px;

      &-text {
        text-decoration: none;
        color: $header-text-color;
      }
    }
  }
}

